Сделаны работающими 4 запроса. owner/update , account/list/ , account/add/ , owner/add/
